Fix nav alignment bug

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -77,7 +77,7 @@ section {
 #section-nav {
     display: grid;
     grid-template-rows: 1.5fr 66px 1fr 66px 1fr 66px 1fr;
-    grid-template-columns: 8vw 1fr 8vw;
+    grid-template-columns: 40px 1fr 40px;
 }
 
 .nav-flexbox-container {
